starting to write notes

--- a/main.tex
+++ b/main.tex
@@ -2,22 +2,42 @@
 \input{preamble}
 \input{macros}
 \input{letterfonts}
+\usepackage{adforn}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\setlength\parindent{0pt}
+\newcommand{\n}{\newline}
+\newcommand{\p}{\adforn{61} \ }
+\newcommand{\s}{\adforn{74} \ }
+
+
+
 \begin{document}
 	
 	\thispagestyle{empty}
 	\mytitleb{Paper F Notes}{Jakub Jadwiszczak}{jadwiszj@tcd.ie}{2026}
 	\newpage% or \cleardoublepage
 	\tableofcontents
-	\chapter{The Paris Convention}
-	\section{Section 1}
+
+\chapter{Introduction to the Patent Cooperation Treaty --- PCT}
+\section{Historical Notes and Some Key Facts}
+
+The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law treaty, concluded in 1970. It provides a unified procedure for filing patent applications to protect inventions in each of its contracting states. \newline
+
+\p   Signed on June 19, 1970 in Washington D.C.. Entered into force on January 24, 1978. The first application was filed on June 1, 1978.\newline
+
+\p A patent application filed under the PCT is called an \underline{\textbf{international application}}, or \textbf{PCT application}. \n
+
+\p No case law. No appeal body -- with exception of questions relating to unity of invention. \n
+
+\p Rules have to cover all situations that might occur -- therefore are very detailed. \n
+
+\p Contracting States have agreed to accept international filing date and the form and content of an international application having the effect of a national application, but they \textbf{have not limited the freedom to grant patents} to an International Authority (IA). This runs in contrast to the EPC --- for example --- where that freedom has been ceded.
+
+
 
 \nt{Article 1}{\textbf{this says OK}}
 
 
 
-	
-\chapter{Second Chapter}
-\section{Section 1}
 \end{document}
