--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{adforn}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{mathtools}
 \setlength\parindent{0pt}
 \newcommand{\n}{\newline}
 \newcommand{\p}{\adforn{61} \ }
@@ -20,7 +21,7 @@
 	\tableofcontents
 
 \chapter{Introduction to the Patent Cooperation Treaty --- PCT}
-\section{Historical Notes and Some Key Facts}
+\section{Historical Notes and Some Quick Facts}
 
 The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law treaty, concluded in 1970. It provides a unified procedure for filing patent applications to protect inventions in each of its contracting states. \newline
 
@@ -32,11 +33,60 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
 \p Rules have to cover all situations that might occur -- therefore are very detailed. \n
 
-\p Contracting States have agreed to accept international filing date and the form and content of an international application having the effect of a national application, but they \textbf{have not limited the freedom to grant patents} to an International Authority (IA). This runs in contrast to the EPC --- for example --- where that freedom has been ceded.
+\p Contracting States have agreed to accept international filing date and the form and content of an international application having the effect of a national application, but they \textbf{have not limited the freedom to grant patents} to an \textbf{International Authority (IA)}. This runs in contrast to the EPC --- for example --- where that freedom has been ceded. \n
+
+\p The international phase includes filing + search + publication + (optional) non-binding examination. No decision to grant. \n
+
+\nt{Definition}{\textbf{``National phase'' for the purposes of PCT should be understood to mean ``national'' \underline{or} ``regional phase.''}} 
+\vspace{5mm}
+\p Any signatory of the Paris Convention may accede to the PCT. \n
+
+\p The national office (NO) must approve form and content of the application as approved in the international phase. \n
+
+\p The cost of entering national phase is similar to a direct national application. Further search + examination may be carried out in the national phase, but the use of the \textbf{international search report (ISR)} and examination may result in a fee reduction at national phase. \n
+
+\p NO will grant patent on initial application with the same effect as on a direct national application. \n
+
+\p PCT is administered by the Word Intellectual Property Organization (WIPO), which is a UN agency. The International Bureau (IB) of WIPO carries out admin for the International Patent Cooperation Union that the Contracting States make up. \n
+
+\p The international phase is carried out before International Authorities. There are > 120 of them and > 20 can act as \textbf{International Search Authorities (ISAs)} or \textbf{International Preliminary Examination Authorities (IPEAs)}.  \n
+
+\p After the international phase, all NOs act as so-called \textbf{designated Offices} (dO) or \textbf{elected Offices} (eO) [the latter in \textit{Chapter II}.]
+
+\section{The Paris Convention for the Protection of Industrial Property}
+
+\begin{center}
+ \href{https://en.wikisource.org/wiki/Paris_Convention_for_the_Protection_of_Industrial_Property_(1883)}{\textbf{Full Text}}
+
+\end{center}
 
 
+\p Signed on March 20, 1883. \n
 
-\nt{Article 1}{\textbf{this says OK}}
+\p Agreement between countries for mutual recognition of IP rights. Nationals of Signatory Countries enjoy the same rights in other States as nationals of those other States. \n
+
+\p It secured \textbf{the right of priority} of a first filing in one State for subsequent applications in other States. \n
+
+\p A \textbf{priority right} is a time-limited right triggered by the \textbf{first filing} of an application for a patent, industrial design, or trademark. It allows the applicant to file a \textbf{subsequent application} in another country that is effectively treated as if filed on the date of the first application, known as the \textbf{priority date}. To use this right, the applicant (\textbf{or their successor in title}) must \textbf{claim priority} in the subsequent application. \n
+
+\p The priority period is \textbf{12 months} for patents and utility models (the \textbf{priority year}) and \textbf{6 months} for industrial designs and trademarks. In the original Paris Convention it was 6 months and 3 months, respectively. \n
+
+\p For patents, this right is crucial because \textbf{novelty} and \textbf{inventive step} are assessed against prior art that was made public \textbf{before the priority date}, not the actual (later) filing date of the subsequent application. \n
+
+\nt{Rationale}{\textbf{according to the EPO: \textit{``(...) basic purpose [of the right of priority] is to safeguard, for a limited period, the interests of a patent applicant in his endeavour to obtain international protection for his invention, thereby alleviating the negative consequences of the principle of territoriality in patent law.''}}} 
+\vspace{5mm}
+
+\p \textbf{\s Art. 19} of the Paris Convention allows for special agreements between Signatory Countries. The Paris Convention \underline{takes precedence} over laws of the Countries and over such special agreements. \n
+
+\p EPC is a ``regional patent treaty'' in the sense of \textbf{Art. 19} of the Paris Convention, e.g., under \textbf{Art. 45 PCT}, a PCT applicant can obtain an \underline{\underline{EP patent}} by filing an initial international application. \n
+
+\nt{Definition}{\textbf{\[
+    \begin{dcases}
+        \mathrm{Patent \ \underline{in} \ a \ state} & = \ \ \mathrm{\underline{national}}\\
+        \mathrm{Patent \ \underline{for} \ a \ state} & = \ \ \mathrm{\underline{regional}} \\
+    \end{dcases}
+\]}} 
+\vspace{5mm}
 
 
 
