First macbook commit

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,9 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 \]}} 
 \vspace{5mm}
 
+\p lorem ipsum \n
+
+
 
 
 \end{document}
