First HW question

--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,123 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
 \p lorem ipsum \n
 
+\chapter{Fillun Homework Questions}
 
+\section{September 22, 2025}
 
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    Two applicants wish to appoint an agent to file their international application.
+    \begin{enumerate}[label=(\alph*)]
+        \item Who can be appointed to act as an agent?
+        \item How must the agent be appointed?
+        \item Do all receiving Offices require the filing of a separate power of attorney?
+        \item Does the EPO require the filing of a separate power of attorney?
+    \end{enumerate}
+    
+    \vspace{1em} % Adds a little vertical space
+    The applicants always work via the same patent attorney office for which a general power of attorney has been prepared.
+    
+    \begin{enumerate}[label=(\alph*), resume]
+        \item Is it necessary to attach a copy of the general power of attorney to the Request [PCT/RO/101]?
+        \item Does the EPO require filing a copy of the general power of attorney?
+    \end{enumerate}
+
+    \item % Question 2
+    An international application is filed at the Japanese National Office. The applicant first mentioned in the Request [PCT/RO/101] is a Taiwanese national resident in Taiwan. The second applicant is a Korean national resident in Korea and the third applicant is a Japanese national resident in Japan. The three applicants have not appointed a common agent or a common representative.
+    \begin{enumerate}[label=(\alph*)]
+        \item Who will be considered to be the common representative of the applicants?
+        \item Would your answer to question (a) have been different if the international application had been filed at the International Bureau?
+        \item Which acts may not be performed by the representative in question (a)?
+        \item Which acts may not be performed by an agent appointed by the representative in question (a)?
+    \end{enumerate}
+
+    \item % Question 3
+    Today, 16 March 2020, the applicant discovers an obvious mistake in the description of his international application filed on Friday 9 March 2018 as a first filing.
+    \begin{enumerate}[label=(\alph*)]
+        \item Can this obvious mistake be corrected? If so, what are the conditions?
+        \item Who is competent to rectify the obvious mistake? What if the mistake is only detected after a demand for international preliminary examination has been made?
+        \item What parts of the international application are taken into account upon correcting the mistake?
+        \item When at the latest can a request for rectification be filed?
+        \item Would your answer have been different if the applicant had discovered an obvious mistake in the abstract of his international application?
+    \end{enumerate}
+
+    \item % Question 4
+    Is it possible to file third party observations in relation to an international application during the international phase? If so, where and how can these be filed?
+
+    \item % Question 5
+    A Danish applicant filed an international application PCT-DK as a first filing on 25 May 2025 with the EPO as receiving Office. Due to cash-flow problems, no fees were paid upon filing. On 30 June 2025, the EPO issues an invitation to pay the missing fees together with a late-payment surcharge.
+
+    \vspace{1em}
+    Indicate True/False:
+    \begin{enumerate}[label=(\alph*)]
+        \item If the applicant has, in fact, paid the fees due at filing on 27 June 2025, the payment will be considered in time.
+        \item The time limit to pay the missing fees together with late-payment surcharge expires on 1 September 2025.
+        \item If the applicant pays the missing fees + surcharge one day after the time limit to do so has expired, this is too late and the EPO is obliged to declare under Art. 14(3) that PCT-DK is considered withdrawn.
+    \end{enumerate}
+
+    \item % Question 6
+    What happens if the applicant is a resident or national of one of the PCT Contracting States but files the international application with a "non-competent" receiving Office? What are the consequences for according the international filing date for such an application? Must an additional fee be paid?
+
+\end{enumerate}
+
+\begin{center}
+
+\p \p \p
+ 
+\end{center}
+
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+    Two applicants wish to appoint an agent to file their international application.
+    \begin{enumerate}[label=(\alph*)]
+        \item Under \textbf{R. 90}: a person having the right to practice before the national Office with which the PCTa is filed \underline{or} having the right to practice before the IB as rO. The latter is governed by \textbf{Rule 83}, i.e., the agent must have a right to practice before the nO of the Contracting State of which the Applicant is a resident or national.
+        \item Applicant enters and signs the name \textbf{and} address of the agent in the request \underline{or} the demand \underline{or} in a separate power of attorney (applicable to a \textbf{specific} PCTa) \underline{or} by a general power of attorney (applicable to \textbf{any} PCTa).
+        \item No.
+        \item No.
+
+        \item Yes. It says so on the \textsc{[PCT/RO/101]} form.
+        \item No. Waiver under \textbf{Rule 90.5(c)}. Two exceptions relating to suspicions as to the nature of the person performing acts apply.
+    \end{enumerate}
+
+    \item % Question 2
+    An international application is filed at the Japanese National Office. The applicant first mentioned in the Request [PCT/RO/101] is a Taiwanese national resident in Taiwan. The second applicant is a Korean national resident in Korea and the third applicant is a Japanese national resident in Japan. The three applicants have not appointed a common agent or a common representative.
+    \begin{enumerate}[label=(\alph*)]
+        \item Who will be considered to be the common representative of the applicants?
+        \item Would your answer to question (a) have been different if the international application had been filed at the International Bureau?
+        \item Which acts may not be performed by the representative in question (a)?
+        \item Which acts may not be performed by an agent appointed by the representative in question (a)?
+    \end{enumerate}
+
+    \item % Question 3
+    Today, 16 March 2020, the applicant discovers an obvious mistake in the description of his international application filed on Friday 9 March 2018 as a first filing.
+    \begin{enumerate}[label=(\alph*)]
+        \item Can this obvious mistake be corrected? If so, what are the conditions?
+        \item Who is competent to rectify the obvious mistake? What if the mistake is only detected after a demand for international preliminary examination has been made?
+        \item What parts of the international application are taken into account upon correcting the mistake?
+        \item When at the latest can a request for rectification be filed?
+        \item Would your answer have been different if the applicant had discovered an obvious mistake in the abstract of his international application?
+    \end{enumerate}
+
+    \item % Question 4
+    Is it possible to file third party observations in relation to an international application during the international phase? If so, where and how can these be filed?
+
+    \item % Question 5
+    A Danish applicant filed an international application PCT-DK as a first filing on 25 May 2025 with the EPO as receiving Office. Due to cash-flow problems, no fees were paid upon filing. On 30 June 2025, the EPO issues an invitation to pay the missing fees together with a late-payment surcharge.
+
+    \vspace{1em}
+    Indicate True/False:
+    \begin{enumerate}[label=(\alph*)]
+        \item If the applicant has, in fact, paid the fees due at filing on 27 June 2025, the payment will be considered in time.
+        \item The time limit to pay the missing fees together with late-payment surcharge expires on 1 September 2025.
+        \item If the applicant pays the missing fees + surcharge one day after the time limit to do so has expired, this is too late and the EPO is obliged to declare under Art. 14(3) that PCT-DK is considered withdrawn.
+    \end{enumerate}
+
+    \item % Question 6
+    What happens if the applicant is a resident or national of one of the PCT Contracting States but files the international application with a "non-competent" receiving Office? What are the consequences for according the international filing date for such an application? Must an additional fee be paid?
+
+\end{enumerate}
 
 \end{document}
