--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{float}
 \usepackage{mathtools}
 \setlength\parindent{0pt}
 \newcommand{\n}{\newline}
@@ -95,14 +96,81 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 \]}} 
 \vspace{5mm}
 
+\p Under \textbf{Art. 45 PCT}, a PCT Applicant can obtain a European patent by filing a PCTa. \n
+
+\p In case of conflict between PCT and EPC/national provisions, the PCT takes precedence. \n
+
+\p A ``Euro--PCT'' application is a PCT application with EPO as dO or eO. \n
+
 \p The PCT timeline for a PCTa claiming priority from a national application: 
 
 \newpage
-\begin{figure}[htbp] % h=here, t=top, b=bottom, p=page: Platzierungs-Optionen
+\begin{figure}[H] % h=here, t=top, b=bottom, p=page: Platzierungs-Optionen
   \centering
   \includegraphics[width=0.85\textwidth]{images/Fig_2.jpg} % Pfad und Dateiname anpassen
   \caption{--- \textbf{\textsc{PCT Timeline}}}
 \end{figure}
+
+
+
+
+\p The international phase includes: international search, publication and (optionally) international preliminary examination. The international phase has a \underline{Chapter I} (\textbf{Art. 3--30}; \textbf{R. 3--52}) and a \underline{Chapter II} (\textbf{Art. 31--42}; \textbf{R. 53--78}). These correspond to search + pub and IPE. \n
+
+\p Each nO has a time limit for entering national phase (usually 30 or 31 months from the priority date). A PCTa can be simultaneously in the international phase and in the national phase for some jurisdictions. \n
+
+\nt{Chapter I}{\textbf{Stage 1}: filing, accordance of date, fees, formal requirements. \newline
+\textbf{Stage 2}: ISR with written opinion on Novelty, IS and industrial applicability. \newline
+\textbf{Stage 3}: publication of PCTa + ISR @18 months after priority date. } 
+\vspace{5mm}
+
+
+\nt{Chapter II}{\textbf{Stage 1}: filing a \underline{\textbf{demand}}, i.e., a request for an IPE --- typically @22 months after priority date.\newline
+\textbf{Stage 2}: can amend claims and discuss Novelty, IS with Examiner. \newline
+\textbf{Stage 3}: receipt of the \underline{IPRP II} typically @28 months from priority date. } 
+\vspace{5mm}
+
+\p Applicant can pay for a Supplementary ISR carried out by a SISA (can be different to ISA of Chapter I, e.g., in order to find prior art in a specific language.) \n
+
+\p If no IPE demanded, written opinion from ISR is converted into the International Preliminary Report on Patentability I (\underline{IPRP I}) with an English translation thereof + documents are communicated to the dO. Usually happens @30 months after priority date.\n
+
+\p IPRP is not binding on the dO but is made available to the dO. dO then becomes the eO.\n
+
+\p Only about 3\% of applications ever enter Chapter II. \n
+
+
+\p \textsc{LU} is a notable exception for entering national phase -- 20 months. \n
+
+\p PCT advantages over direct national application include: 
+
+\begin{itemize}
+ \item cost reduction,
+ \item 30-month delay to check market developments, own product developments, etc.,
+ \item patentability opinion to inform later actions,
+ \item delay of formalities/payments right away.
+\end{itemize}
+
+\p If no priority claim, then \textbf{the priority date is the PCTa filing date}. \n
+
+\p ``Agent'' is ``professional representative'' in EPC terminology. \n
+
+\p Terminology for document copies:
+
+\begin{itemize}
+\centering
+ \item \textbf{Home copy} --- stays with rO.
+ \item \textbf{Record copy} --- sent to IB.
+ \item \textbf{Search copy} --- sent to ISA.
+\end{itemize}
+
+\p Record copy is the \textbf{true} copy. \n
+
+\p It is possible that scope of PCTa only includes \textit{certain territories} of a CS, e.g., a Euro--PCT for Denmark does not include the Faroe Islands. \n
+
+\p States can join to form a single legal territory for patent law, e.g., Switzerland and Liechtenstein. \n
+
+
+
+
 
 \newpage
 
@@ -213,16 +281,21 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
       Third party observations may be submitted at any time \textbf{after the date of publication} of the international application \underline{and} \textbf{before the expiration of 28 months from the priority date}, provided that the application is not withdrawn or considered withdrawn.
       
-      
-    \item % Question 5
+                They can be submitted through ePCT at no cost (you need a WIPO account). Each observation must                                                                                          include at least one citation that refers to a document published before the international                                         filing date, or a patent document having a priority date before the international filing date, together with a brief explanation of how each document is considered to be relevant to                                                                                                                                                                                                                                                                                                                                                                                                                                          the questions of novelty and/or inventive step of the claimed invention. Observations                                                                                                                                                                                                                                                                                                                                                                                                                                           should preferably be accompanied by a copy of each cited document.      They should be submitted in a language of publication (copies of prior art may be in any language). A single party may only submit a single observation for any PCTa, with a cap of ten observations (generally existing) per PCTa. 
+                
+                
+                
+                
+                
+    \item % Question 5                         
     A Danish applicant filed an international application PCT-DK as a first filing on 25 May 2025 with the EPO as receiving Office. Due to cash-flow problems, no fees were paid upon filing. On 30 June 2025, the EPO issues an invitation to pay the missing fees together with a late-payment surcharge.
-
- 
+                                                                                          
+                                                                                          
     Indicate True/False:
     \begin{enumerate}[label=(\alph*)]
-        \item If the applicant has, in fact, paid the fees due at filing on 27 June 2025, the payment will be considered in time.
-        \item The time limit to pay the missing fees together with late-payment surcharge expires on 1 September 2025.
-        \item If the applicant pays the missing fees + surcharge one day after the time limit to do so has expired, this is too late and the EPO is obliged to declare under Art. 14(3) that PCT-DK is considered withdrawn.
+        \item \textbf{True} --- any payment received by rO before invitation to pay fees is considered to have been received before the time limit.
+        \item \textbf{False} --- \textit{1 month} from the date of the invitation is the time limit. So it should be 30 July 2025.
+        \item \textbf{False} --- any payment received before this declaration by the rO shall be considered to have been received before the expiration of the time limit. 
     \end{enumerate}
 
     \item % Question 6
