All 1st week HW Qs and notes up to international filing fee

--- a/main.tex
+++ b/main.tex
@@ -168,6 +168,99 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
 \p States can join to form a single legal territory for patent law, e.g., Switzerland and Liechtenstein. \n
 
+\newpage
+
+\chapter{The International Application (\textsc{PCTa})}
+
+\section{Basics}
+
+\p Elements that a PCTa must contain:
+
+\begin{itemize}
+ \item a request (\textbf{Art. 4)},
+ \item a description (\textbf{Art. 5)},
+ \item one or more claims (\textbf{Art. 6)},
+ \item where required, one or more drawings (\textbf{Art. 7)},
+ \item an abstract (\textbf{Art. 8)}.
+\end{itemize}
+
+\p To accord a \textbf{filing date}, you need:
+
+\begin{itemize}
+ \item an indication that it is inteded as a PCTa, including a designation of a Contracting State and name of Applicant,
+ \item a description,
+ \item at least one claim.
+\end{itemize}
+
+\p The Abstract may be submitted later though. \n
+
+\p On filing, the description, claims and drawings may be replaced by \underline{reference to a priority application,} from which the rO will copy them [\textbf{R. 4.18} \& \textbf{R. 20.6}].
+
+\section{Art. 3(4)(i) \& Rule 12 --- Languages and Translations}
+
+\subsection{Languages accepted by the rO}
+
+\p A PCTa must be filed in a language prescribed by the rO. \textbf{Every} rO accepts at least one language, which is \textbf{both} a language accepted by the competent ISA \underline{and} a language of publication. Languages of publication are listed under \textbf{R. 48.3(a)}. If using the language of publication, no translation need be filed.  \n
+
+\p To get a filing date, claims and description must be in a language accepted by that rO. For cases of mixed languages of claims/description, an invitation to correct this will be issued under [\textbf{R. 26.3\textit{ter}(a)}]. \n
+
+\p Languages of the request and the description/claims may be different though, e.g., an English request and Dutch claims/description. \n
+
+\p The rO may require a translation for the purposes of search or publication, e.g., \textsc{RO/EP} requires \textbf{FR/EN/DE} translation. \n
+
+\p All rOs of EPC CSs have specified the EPO as their competent ISA. Search in Dutch is possible at the EPO if the application was filed in Dutch for historical reasons. \n
+
+\p The language of the rO need not be the official language of that CS. See also national security considerations under \textbf{Art. 27.8}, which may become relevant in such a case. \n
+
+\p If a nO as rO does not accept the application language, it will transmit the PCTa to the IB to act as the rO under [\textbf{R. 19.4}]. IB accepts \textbf{any language}. In that case, new fees will need to be paid to the IB, the fees already paid to the nO will be refunded --- \textbf{except the transmittal fee} --- and the Applicant has to send the priority document to the IB. \n
+
+\subsection{Translations}
+
+\p The Applicant must provide a translation if:
+
+\begin{enumerate}
+ \item the language of filing is not accepted by the ISA (or SISA);
+ \item the language of the ISA is not a publication language.
+\end{enumerate}
+
+\p The translation must be provided within \textbf{1 month of filing at the rO} -- otherwise a late furnishing fee is also due (equal to \textbf{25 \% of the international filing fee}). \n
+
+\p The translation must be in the language of the ISA, language of publication \underline{and} language of the rO. Sequence listing free text needs to be translated as well. \n
+
+\p If no translation is provided, the PCTa will be declared by the rO to have been withdrawn . \n
+
+\p The rO will invite a translation witin 1 month of filing, if not received at filing. The late submission deadline is \textbf{2 months after filing} or \textbf{1 month after the invitation} -- whichever expires \textbf{later}. \n
+
+\p Nonetheless, a translation and payment received before 15 months after priority date will be considered as received in time. Furthermore, a translation and payment received \textbf{before the rO makes the declaration} is also considered as received on time. \n
+
+\p Under [\textbf{R. 12.4}] --- where a PCTa has been filed in a language accepted by the ISA, which is not a language of publication:
+
+\begin{itemize}
+ \item the Applicant must file a translation to a language of publication within \textbf{14 months} of the priority date;
+ \item the rO will send an invitation for the late translation within \textbf{16 months} of the priority date;
+ \item if the translation and late payment fee are received within \textbf{17 months} of the priority date, it is considered on time; and
+ \item if the translation and late payment fee are received before the rO \textbf{declares withdrawal}, it is still considered on time.
+\end{itemize}
+
+\p PCT has a provision for retroactive scope limitation due to an incorrect translation under [\textbf{Art. 46}].
+
+\section{Fees}
+
+\p On filing of a PCTa, three fees (in Swiss francs) become due at the rO:
+
+\begin{enumerate}
+ \item transmittal fee;
+ \item international filing fee (including sheet fee if $>$ 30 pages;
+ \item international search fee.
+\end{enumerate}
+
+\p There are no claims fees. They may be due for some offices in the national phase. \n
+
+\p PCT has no provisions for methods of payment or according a date of payment. Each rO will have its own rules on that. \n
+
+\p The \textbf{transmittal fee} [\textbf{R. 14}] --- includes checking the PCTa, transmitting a record copy to the IB and the search copy to the ISA. The time limit for receipt is \textbf{1 month from the date of receipt of the application by the rO} (not from the filing date). The filing date might be shifted due to missing elements, etc., so the fees deadlines are not dependent on the filing date. This deadline is also shifted if the rO sends the PCTa to the IB when the rO is not the Competent Authority. \n
+
+\p The \textbf{international filing fee} [\textbf{R. 15}] --- includes publication, translation/s and communication to ISA/SISA/IPEA. Must be paid before formalities check of \textbf{Art. 14(1)(a)} and any resulting corrections. The 30 pages limit before any extra fees is calculated on the basis of documents as filed. Within \textbf{1 month of date of receipt of the PCTa} again (not the filing date).
 
 
 
@@ -300,7 +393,17 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
     \item % Question 6
     What happens if the applicant is a resident or national of one of the PCT Contracting States but files the international application with a "non-competent" receiving Office? What are the consequences for according the international filing date for such an application? Must an additional fee be paid?
+    
+    The PCTa will be considered to have been received by the Office with which it was filed on behalf of the IB as rO. The PCTa will be date-stamped by the nO (or regional Office) concerned and promptly submitted to the IB (unless for national security reasons).
+    
+    The filing date will be the date of receipt by the nO, but for calculating time limits for fee payments, the date on which the IB received the application will be used.
+    
+    That transmittal from nO to IB may be subjected to the payment of a fee equal to the transmittal fee, with other fees being refunded and then pending for payment again at the IB. 
 
 \end{enumerate}
+
+\section{September 29, 2025}
+
+
 
 \end{document}
